k8s/client-cluster-ip-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: client-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    # Doesn't need NodePort since it's not accessible externally
    - port: 3000
      targetPort: 3000
