k8s/server-cluster-ip-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: server-cluster-ip-service

spec:
  # Type of Service that this object is
  type: ClusterIP

  # Which set of pods this service should provide access to
  selector:
    component: server

  ports:
    - port: 5000
      targetPort: 5000
